@@ -1,0 +1,7 @@
+BASEDIR=../..
+#MODULES=
+MAIN_MODULE=test
+C_FILES=stub_test
+
+include $(BASEDIR)/makefiles/Makefile.one
+include $(BASEDIR)/makefiles/Makefile.common
